[package]
name = "turt"
version = "0.1.0"
edition = "2021"
authors = ["benpski"]
description = "Simple command-line password manager"
homepage = "https://github.com/BenPski/turt"
categories = ["command-line-utilities"]

[[bin]]
name = "turt"
path = "src/main.rs"

[dependencies]
rand = "0.8.5"
clap = { version = "4.4.11", features = ["derive"] }
rpassword = "7.3.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
dirs = "5.0.1"
fernet = "0.2.1"
anyhow = "1.0.79"
base64 = "0.21.7"
scrypt = "0.11.0"
arboard = "3.3.0"
