[project]
name = "turt"
version = "0.1.0"
authors = [
    { name="benpski", email="ben@pepski.com" },
]
description = "A simple vault manager. Each vault stores some data and is encrypted with a master password."
readme = "README.md"
requires-python = ">= 3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "asyncio",
    "websockets",
    "cryptography"
]

[project.urls]
Homepage = "https://github.com/BenPski/turt"
Issues = "https://github.com/BenPski/turt/issues"

[project.scripts]
cli-name = "turt.turt:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
